Async tester: added doc